--- a/integration/pom.xml
+++ b/integration/pom.xml
@@ -28,6 +28,11 @@
 		
 		<!-- Other Dependencies -->
 		<dependency>
+			<groupId>javax.servlet</groupId>
+			<artifactId>servlet-api</artifactId>
+			<scope>provided</scope>
+		</dependency>
+		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-aop</artifactId>
 		</dependency>
