--- a/integration/src/main/resources/META-INF/piecework/default.properties
+++ b/integration/src/main/resources/META-INF/piecework/default.properties
@@ -7,3 +7,13 @@ mongo_port = 27017
 mongo_filesystem = data
 mongo_username = 
 mongo_password = 
+
+ldap.base = 
+ldap.url = 
+ldap.groupbase = 
+
+keystore.file = 
+keystore.password =
+
+authentication.strategy =
+
