--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -28,8 +28,8 @@
 		<commons-http-client.version>3.0.1</commons-http-client.version>
 		<commons-io.version>1.4</commons-io.version>
 		<commons-lang.version>2.3</commons-lang.version>
-		<cxf.version>2.7.0</cxf.version>
-		<ehcache.version>2.5.1</ehcache.version>
+		<cxf.version>2.7.3</cxf.version>
+		<ehcache.version>2.6.5</ehcache.version>
 		<ehcache-spring-annotations.version>1.2.0</ehcache-spring-annotations.version>
 		<flapdoodle.version>1.28</flapdoodle.version>
 		<geronimo-annotation.version>1.1.1</geronimo-annotation.version>
@@ -55,7 +55,7 @@
 		<spring.data.mongo.version>1.1.1.RELEASE</spring.data.mongo.version>
 		<spring.version>3.2.1.RELEASE</spring.version>
 		<spring.ldap.version>1.3.1.RELEASE</spring.ldap.version>
-		<spring.security.version>3.0.3.RELEASE</spring.security.version>
+		<spring.security.version>3.1.3.RELEASE</spring.security.version>
 		<xalan.version>2.7.0</xalan.version>
 	</properties>
 	<profiles>
@@ -284,6 +284,12 @@
 				<groupId>org.apache.cxf</groupId>
 				<artifactId>cxf-rt-transports-http-jetty</artifactId>
 				<version>${cxf.version}</version>
+				<type>jar</type>
+			</dependency>
+			<dependency>
+				<groupId>org.apache.directory.server</groupId>
+				<artifactId>apacheds-all</artifactId>
+				<version>1.5.5</version>
 				<type>jar</type>
 			</dependency>
 			<dependency>
