--- a/core/src/main/resources/META-INF/piecework/default.properties
+++ b/core/src/main/resources/META-INF/piecework/default.properties
@@ -8,13 +8,13 @@ mongo_filesystem = data
 mongo_username = 
 mongo_password = 
 
-ldap.person.base = ou=People,dc=example
-ldap.person.url = ldap://127.0.0.1:10389
-ldap.person.search.base =
+ldap.person.base = dc=springframework,dc=org
+ldap.person.url = ldap://127.0.0.1:33389
+ldap.person.search.base = 
 ldap.person.search.filter = uid={0}
-ldap.person.dn = uid={0}
-ldap.group.base = ou=Groups,dc=example
-ldap.group.url = ldap://127.0.0.1:10389
+ldap.person.dn = uid={0},ou=people
+ldap.group.base = ou=groups,dc=springframework,dc=org
+ldap.group.url = ldap://127.0.0.1:33389
 ldap.group.search.base =
 ldap.group.search.filter = member=uid={1}
 
