--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -300,7 +300,7 @@
 			<dependency>
 				<groupId>org.mockito</groupId>
 				<artifactId>mockito-all</artifactId>
-				<version>1.9.0</version>
+				<version>1.9.5</version>
 			</dependency>
 			<dependency>
 				<groupId>org.mongodb</groupId>
@@ -411,6 +411,11 @@
 				<artifactId>spring-orm</artifactId>
 				<version>${spring.version}</version>
 			</dependency>
+			<dependency>
+				<groupId>org.springframework.security</groupId>
+				<artifactId>spring-security-config</artifactId>
+				<version>${spring.security.version}</version>
+			</dependency>			
 			<dependency>
 				<groupId>org.springframework.security</groupId>
 				<artifactId>spring-security-core</artifactId>
