Basic structure for authorization by role and process using spring voter

--- a/core/src/main/resources/META-INF/piecework/default.properties
+++ b/core/src/main/resources/META-INF/piecework/default.properties
@@ -16,7 +16,7 @@ ldap.person.dn = uid={0},ou=people
 ldap.group.base = ou=groups,dc=springframework,dc=org
 ldap.group.url = ldap://127.0.0.1:33389
 ldap.group.search.base =
-ldap.group.search.filter = member=uid={1}
+ldap.group.search.filter = member=uid={1},ou=people,dc=springframework,dc=org
 
 keystore.file = 
 keystore.password =
