Working on hooking up mustache.java through cxf messagebodywriter

--- a/core/pom.xml
+++ b/core/pom.xml
@@ -21,6 +21,10 @@
 	<dependencies>
 		<!-- Other Dependencies -->
 		<dependency>
+			<groupId>com.github.spullara.mustache.java</groupId>
+			<artifactId>compiler</artifactId>
+		</dependency>
+		<dependency>
 			<groupId>commons-beanutils</groupId>
 			<artifactId>commons-beanutils</artifactId>
 		</dependency>
