--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -49,6 +49,7 @@
 		<junit.version>4.8.2</junit.version>
 		<log4j.version>1.2.14</log4j.version>
 		<mongo-java-driver.version>2.10.1</mongo-java-driver.version>
+		<mustache.version>0.8.10</mustache.version>
 		<mysql.connector.version>5.1.5</mysql.connector.version>
 		<slf4j.version>1.6.1</slf4j.version>
 		<spring.data.commons.version>1.4.0.RELEASE</spring.data.commons.version>
@@ -111,15 +112,14 @@
 	<dependencyManagement>
 		<dependencies>
 			<dependency>
-				<groupId>org.kuali.rice.extras</groupId>
-				<artifactId>uw-rice-extras</artifactId>
-				<version>${rice.version}</version>
-			</dependency>
-
-			<dependency>
 				<groupId>cglib</groupId>
 				<artifactId>cglib</artifactId>
 				<version>${cglib.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>com.github.spullara.mustache.java</groupId>
+				<artifactId>compiler</artifactId>
+				<version>${mustache.version}</version>
 			</dependency>
 			<dependency>
 				<groupId>com.googlecode.ehcache-spring-annotations</groupId>
