--- a/core/src/main/resources/META-INF/piecework/default.properties
+++ b/core/src/main/resources/META-INF/piecework/default.properties
@@ -21,5 +21,5 @@ ldap.group.search.filter = member=uid={1},ou=people,dc=springframework,dc=org
 keystore.file = 
 keystore.password =
 
-authentication.strategy =
+preauthentication.user.request.header = SM_USER
 
