--- a/integration/src/main/resources/log4j.properties
+++ b/integration/src/main/resources/log4j.properties
@@ -6,3 +6,4 @@ log4j.appender.A1.layout=org.apache.log4j.PatternLayout
 log4j.appender.A1.layout.ConversionPattern=%d{ISO8601} [%t] %-5p %c %x - %m%n
 
 log4j.logger.piecework=DEBUG
+log4j.logger.org.springframework.security=DEBUG
