--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -14,6 +14,20 @@
 	<name>Piecework :: Parent</name>
 	<description>Piecework Parent POM</description>
 
+	<repositories>
+		<repository>
+			<id>spring-libs-snapshot</id>
+			<name>Spring Snapshot Repository</name>
+			<url>http://repo.springsource.org/snapshot</url>
+			<releases>
+				<enabled>false</enabled>
+			</releases>
+			<snapshots>
+				<enabled>true</enabled>
+			</snapshots>
+		</repository>
+	</repositories>
+
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<rice.version>1.0.3.1</rice.version>
@@ -51,12 +65,14 @@
 		<mongo-java-driver.version>2.10.1</mongo-java-driver.version>
 		<mustache.version>0.8.10</mustache.version>
 		<mysql.connector.version>5.1.5</mysql.connector.version>
+		<querydsl.version>2.8.0</querydsl.version>
 		<slf4j.version>1.6.1</slf4j.version>
 		<spring.data.commons.version>1.4.0.RELEASE</spring.data.commons.version>
 		<spring.data.mongo.version>1.1.1.RELEASE</spring.data.mongo.version>
 		<spring.version>3.2.1.RELEASE</spring.version>
 		<spring.ldap.version>1.3.1.RELEASE</spring.ldap.version>
 		<spring.security.version>3.1.3.RELEASE</spring.security.version>
+		<spring.security.javaconfig.version>1.0.0.CI-SNAPSHOT</spring.security.javaconfig.version>
 		<xalan.version>2.7.0</xalan.version>
 	</properties>
 	<profiles>
@@ -125,6 +141,11 @@
 				<groupId>com.googlecode.ehcache-spring-annotations</groupId>
 				<artifactId>ehcache-spring-annotations</artifactId>
 				<version>${ehcache-spring-annotations.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>com.mysema.querydsl</groupId>
+				<artifactId>querydsl-mongodb</artifactId>
+				<version>${querydsl.version}</version>
 			</dependency>
 			<dependency>
 				<groupId>commons-beanutils</groupId>
@@ -426,6 +447,11 @@
 						<groupId>commons-logging</groupId>
 					</exclusion>
 				</exclusions>
+			</dependency>
+			<dependency>
+				<groupId>org.springframework.security</groupId>
+				<artifactId>spring-security-javaconfig</artifactId>
+				<version>${spring.security.javaconfig.version}</version>
 			</dependency>
 			<dependency>
 				<groupId>org.springframework.security</groupId>
