Stubbed out form get with demo data, more files

--- a/core/src/main/resources/META-INF/piecework/default.properties
+++ b/core/src/main/resources/META-INF/piecework/default.properties
@@ -1,12 +1,10 @@
 
-statement = Hello there, new world!
-
-mongo_bindip = 127.0.0.1
-mongo_db = piecework
-mongo_port = 27017
-mongo_filesystem = data
-mongo_username = 
-mongo_password = 
+mongo.bindip = 127.0.0.1
+mongo.db = demo
+mongo.port = 37017
+mongo.filesystem = data
+mongo.username = 
+mongo.password = 
 
 ldap.person.base = dc=springframework,dc=org
 ldap.person.url = ldap://127.0.0.1:33389
@@ -22,4 +20,5 @@ keystore.file =
 keystore.password =
 
 preauthentication.user.request.header = SM_USER
-
+authentication.type = NONE
+authentication.testuser = rod
