--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -51,6 +51,7 @@
 		<hibernate-validator.version>4.0.0.CR1</hibernate-validator.version>
 		<htmlcleaner.version>2.2</htmlcleaner.version>
 		<httpclient4-version>4.1.1</httpclient4-version>
+		<jackson.version>1.9.0</jackson.version>
 		<jaxb.api.version>2.1</jaxb.api.version>
 		<jaxb.impl.version>2.1.13</jaxb.impl.version>
 		<javax.persistence.version>1.0</javax.persistence.version>
@@ -317,6 +318,11 @@
 				<groupId>org.apache.httpcomponents</groupId>
 				<artifactId>httpclient</artifactId>
 				<version>${httpclient4-version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.codehaus.jackson</groupId>
+				<artifactId>jackson-jaxrs</artifactId>
+				<version>${jackson.version}</version>
 			</dependency>
 			<dependency>
 				<groupId>org.mockito</groupId>
