--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -42,6 +42,7 @@
 		<commons-http-client.version>3.0.1</commons-http-client.version>
 		<commons-io.version>1.4</commons-io.version>
 		<commons-lang.version>2.3</commons-lang.version>
+		<commons-validator.version>1.4.0</commons-validator.version>
 		<cxf.version>2.7.3</cxf.version>
 		<ehcache.version>2.6.5</ehcache.version>
 		<ehcache-spring-annotations.version>1.2.0</ehcache-spring-annotations.version>
@@ -176,6 +177,11 @@
 				<groupId>commons-lang</groupId>
 				<artifactId>commons-lang</artifactId>
 				<version>${commons-lang.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>commons-validator</groupId>
+				<artifactId>commons-validator</artifactId>
+				<version>${commons-validator.version}</version>
 			</dependency>
 			<dependency>
 				<groupId>de.flapdoodle.embed</groupId>
@@ -493,4 +499,6 @@
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
+
+
 </project>
