Switching over to use require.js

--- a/core/src/main/resources/META-INF/piecework/default.properties
+++ b/core/src/main/resources/META-INF/piecework/default.properties
@@ -1,4 +1,6 @@
 
+application.name = Piecework
+
 mongo.bindip = 127.0.0.1
 mongo.db = demo
 mongo.port = 37017
@@ -22,3 +24,5 @@ keystore.password =
 preauthentication.user.request.header = SM_USER
 authentication.type = NONE
 authentication.testuser = rod
+
+ui.static.urlbase = /piecework/static
