--- a/pom.xml
+++ b/pom.xml
@@ -21,8 +21,8 @@
 	<modules>
 		<module>parent</module>
 		<module>core</module>
-		<module>components</module>
 		<module>integration</module>
+		<module>processes</module>
 		<module>web</module>
 	</modules>
 	
