--- a/components.json
+++ b/components.json
@@ -15,5 +15,11 @@
     "underscore": null,
     "underscore-amd": null,
     "html5shiv": "~3.6.2"
+  },
+  "devDependencies": {
+    "mocha": "~1.9.0",
+    "chai": "~1.5.0",
+    "sinon": "~1.6.0",
+    "sinon-chai": "~2.4.0"
   }
 }
