Working in Chaplin using boilerplate example

--- a/core/src/main/resources/META-INF/piecework/default.properties
+++ b/core/src/main/resources/META-INF/piecework/default.properties
@@ -1,9 +1,10 @@
 
 application.name = Piecework
 
-mongo.bindip = 127.0.0.1
+mongo.size = 1
+mongo.bindip.1 = 127.0.0.1
+mongo.port.1 = 37017
 mongo.db = demo
-mongo.port = 37017
 mongo.filesystem = data
 mongo.username = 
 mongo.password = 
