--- a/bower.json
+++ b/bower.json
@@ -14,7 +14,9 @@
     "requirejs": null,
     "underscore": null,
     "underscore-amd": null,
-    "html5shiv": "~3.6.2"
+    "html5shiv": "~3.6.2",
+    "chaplin": "0.8.1",
+    "text": "https://github.com/requirejs/text.git#~2.0.6"
   },
   "devDependencies": {
     "mocha": "~1.9.0",
