--- a/bower.json
+++ b/bower.json
@@ -16,7 +16,8 @@
     "underscore-amd": null,
     "html5shiv": "~3.6.2",
     "chaplin": "0.8.1",
-    "text": "https://github.com/requirejs/text.git#~2.0.6"
+    "text": "https://github.com/requirejs/text.git#~2.0.6",
+    "less": "~0.0.4"
   },
   "devDependencies": {
     "mocha": "~1.9.0",
