Reworking into two Chaplin applications - one for process design and one for screen design

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,12 @@
 # Bower Files #
 components
 
+# Node Files #
+node_components
+
+# Pushserve test server #
+pushserve
+
 # Eclipse Files #
 bin
 .project
