--- a/core/src/main/resources/META-INF/piecework/default.properties
+++ b/core/src/main/resources/META-INF/piecework/default.properties
@@ -27,3 +27,6 @@ authentication.type = NONE
 authentication.testuser = rod
 
 ui.static.urlbase = /piecework/static
+
+base.application.uri = /piecework
+base.service.uri = /piecework
