Expanding unit test for process resource

--- a/core/src/main/resources/META-INF/piecework/default.properties
+++ b/core/src/main/resources/META-INF/piecework/default.properties
@@ -28,5 +28,5 @@ authentication.testuser = rod
 
 ui.static.urlbase = /piecework/static
 
-base.application.uri = /piecework
-base.service.uri = /piecework
+base.application.uri = /piecework/secure
+base.service.uri = /piecework/secure
