Simplifying data model on service for screen, interaction

--- a/core/src/main/resources/piecework/exception/StatusCodeError.properties
+++ b/core/src/main/resources/piecework/exception/StatusCodeError.properties
@@ -1,7 +1,11 @@
+
+
+interaction_invalid 	 	 = Interaction with key %s does not exist or does not belong to the process definition key provided
+
 process_change_key_duplicate = Cannot rename process from %s to %s because a process with the new key already exists
 process_does_not_exist 		 = Process with key %s does not exist
 
-
+screen_id_invalid 			 = Screen identifier should not be provided on creation
 
 
 
