Wiring up interactions and screens on process detail interface

--- a/core/src/main/resources/piecework/exception/StatusCodeError.properties
+++ b/core/src/main/resources/piecework/exception/StatusCodeError.properties
@@ -1,5 +1,6 @@
 
 
+interaction_id_invalid 		 = Interaction identifier should be not provided on creation
 interaction_invalid 	 	 = Interaction with key %s does not exist or does not belong to the process definition key provided
 
 process_change_key_duplicate = Cannot rename process from %s to %s because a process with the new key already exists
