--- a/web/pom.xml
+++ b/web/pom.xml
@@ -41,7 +41,7 @@
 		
 		<dependency>
 			<groupId>${project.groupId}</groupId>
-			<artifactId>piecework-components</artifactId>
+			<artifactId>piecework-processes</artifactId>
 			<version>${project.version}</version>
 		</dependency>
 		
