--- a/core/src/main/resources/META-INF/piecework/default.properties
+++ b/core/src/main/resources/META-INF/piecework/default.properties
@@ -1,9 +1,7 @@
 
 application.name = Piecework
 
-mongo.size = 1
-mongo.bindip.1 = 127.0.0.1
-mongo.port.1 = 37017
+mongo.server.addresses = 127.0.0.1:27017
 mongo.db = demo
 mongo.filesystem = data
 mongo.username = 
