Stubbing out process instance resource and engine runtime facade.

--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,7 @@
 		<module>integration</module>
 		<module>processes</module>
 		<module>web</module>
-	</modules>
+        <module>engine</module>
+    </modules>
 	
 </project>
