Stubbing out process engine connections

--- a/core/src/main/resources/META-INF/piecework/default.properties
+++ b/core/src/main/resources/META-INF/piecework/default.properties
@@ -28,3 +28,11 @@ ui.static.urlbase = /piecework/static
 
 base.application.uri = /piecework/secure
 base.service.uri = /piecework/secure
+
+activiti.datasource.hibernate.dialect = org.hibernate.dialect.H2Dialect
+activiti.datasource.driver.name = org.h2.Driver
+activiti.datasource.url = jdbc:h2:mem:activiti;DB_CLOSE_DELAY=1000
+activiti.datasource.username = sa
+activiti.datasource.password = 
+activiti.datasource.ddl.auto = update
+activiti.datasource.show.sql = true
