--- a/engine/pom.xml
+++ b/engine/pom.xml
@@ -12,6 +12,10 @@
 
     <artifactId>piecework-engine</artifactId>
 
+	<properties>
+		<activiti.version>5.12.1</activiti.version>
+	</properties>
+
     <repositories>
         <repository>
             <id>Alfresco Maven Repository</id>
@@ -21,11 +25,43 @@
 
 
     <dependencies>
+		<!-- Piecework Dependencies -->
+		<dependency>
+			<groupId>${project.groupId}</groupId>
+			<artifactId>piecework-core</artifactId>
+			<version>${project.version}</version>
+		</dependency>
+		
+		<!-- Other Dependencies -->
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+		</dependency>
         <dependency>
             <groupId>org.activiti</groupId>
             <artifactId>activiti-engine</artifactId>
-            <version>5.12.1</version>
+            <version>${activiti.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.activiti</groupId>
+            <artifactId>activiti-spring</artifactId>
+            <version>${activiti.version}</version>
+        </dependency>
+		<dependency>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-validator</artifactId>
+			<scope>test</scope>
+			<exclusions>
+				<exclusion>
+					<artifactId>slf4j-api</artifactId>
+					<groupId>org.slf4j</groupId>
+				</exclusion>
+			</exclusions>
+		</dependency>
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-context</artifactId>
