--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -68,7 +68,7 @@
 		<mustache.version>0.8.10</mustache.version>
 		<mysql.connector.version>5.1.5</mysql.connector.version>
 		<querydsl.version>2.8.0</querydsl.version>
-		<slf4j.version>1.6.1</slf4j.version>
+		<slf4j.version>1.7.2</slf4j.version>
 		<spring.data.commons.version>1.4.0.RELEASE</spring.data.commons.version>
 		<spring.data.mongo.version>1.1.1.RELEASE</spring.data.mongo.version>
 		<spring.version>3.2.1.RELEASE</spring.version>
@@ -380,9 +380,34 @@
 			</dependency>
 			<dependency>
 				<groupId>org.slf4j</groupId>
+				<artifactId>slf4j-nop</artifactId>
+				<version>${slf4j.version}</version>
+				<type>jar</type>
+			</dependency>
+			<dependency>
+				<groupId>org.slf4j</groupId>
 				<artifactId>slf4j-simple</artifactId>
 				<version>${slf4j.version}</version>
 				<type>jar</type>
+			</dependency>
+			<dependency>
+				<groupId>org.slf4j</groupId>
+				<artifactId>slf4j-api</artifactId>
+				<version>${slf4j.version}</version>
+				<type>jar</type>
+				<!-- <scope>compile</scope> -->
+			</dependency>
+			<dependency>
+				<groupId>org.slf4j</groupId>
+				<artifactId>slf4j-log4j12</artifactId>
+				<version>${slf4j.version}</version>
+				<type>jar</type>
+				<!-- <scope>compile</scope>-->
+			</dependency>
+			<dependency>
+				<groupId>org.slf4j</groupId>
+				<artifactId>jcl-over-slf4j</artifactId>
+				<version>${slf4j.version}</version>
 			</dependency>
 			<dependency>
 				<groupId>org.springframework</groupId>
