--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -48,6 +48,7 @@
 		<ehcache-spring-annotations.version>1.2.0</ehcache-spring-annotations.version>
 		<flapdoodle.version>1.30</flapdoodle.version>
 		<geronimo-annotation.version>1.1.1</geronimo-annotation.version>
+		<h2.version>1.3.171</h2.version>
 		<hibernate.version>3.6.0.Final</hibernate.version>
 		<hibernate-validator.version>4.0.0.CR1</hibernate-validator.version>
 		<htmlcleaner.version>2.5</htmlcleaner.version>
@@ -70,7 +71,7 @@
 		<querydsl.version>2.8.0</querydsl.version>
 		<slf4j.version>1.7.2</slf4j.version>
 		<spring.data.commons.version>1.4.0.RELEASE</spring.data.commons.version>
-		<spring.data.mongo.version>1.1.1.RELEASE</spring.data.mongo.version>
+		<spring.data.mongo.version>1.2.1.RELEASE</spring.data.mongo.version>
 		<spring.version>3.2.1.RELEASE</spring.version>
 		<spring.ldap.version>1.3.1.RELEASE</spring.ldap.version>
 		<spring.security.version>3.1.3.RELEASE</spring.security.version>
@@ -143,6 +144,11 @@
 				<groupId>com.googlecode.ehcache-spring-annotations</groupId>
 				<artifactId>ehcache-spring-annotations</artifactId>
 				<version>${ehcache-spring-annotations.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>com.h2database</groupId>
+				<artifactId>h2</artifactId>
+				<version>${h2.version}</version>
 			</dependency>
 			<dependency>
 				<groupId>com.mysema.querydsl</groupId>
