Clarifying interaction with process engine, cleaning up reused code between form and instance resources

--- a/core/src/main/resources/META-INF/piecework/default.properties
+++ b/core/src/main/resources/META-INF/piecework/default.properties
@@ -17,6 +17,9 @@ ldap.group.url = ldap://127.0.0.1:33389
 ldap.group.search.base =
 ldap.group.search.filter = member=uid={1},ou=people,dc=springframework,dc=org
 
+certificate.subject.header = HTTP_HEADER_CERTIFICATE_SUBJECT_NAME
+certificate.issuer.header  = HTTP_HEADER_CERTIFICATE_ISSUER_NAME
+
 keystore.file = 
 keystore.password =
 
