--- a/core/src/main/resources/piecework/exception/StatusCodeError.properties
+++ b/core/src/main/resources/piecework/exception/StatusCodeError.properties
@@ -1,4 +1,5 @@
 
+certificate_does_not_match   = Form cannot be submitted using a different certificate than it was requested by
 
 interaction_id_invalid 		 = Interaction identifier should be not provided on creation
 interaction_invalid 	 	 = Interaction with key %s does not exist or does not belong to the process definition key provided
