Sketching out restricted data handling, implementing resources

--- a/core/src/main/resources/META-INF/piecework/default.properties
+++ b/core/src/main/resources/META-INF/piecework/default.properties
@@ -1,11 +1,33 @@
 
+activiti.datasource.hibernate.dialect = org.hibernate.dialect.H2Dialect
+activiti.datasource.driver.name = org.h2.Driver
+activiti.datasource.url = jdbc:h2:mem:activiti;DB_CLOSE_DELAY=1000
+activiti.datasource.username = sa
+activiti.datasource.password =
+activiti.datasource.ddl.auto = update
+activiti.datasource.show.sql = true
+
 application.name = Piecework
 
-mongo.server.addresses = 127.0.0.1:27017
-mongo.db = demo
-mongo.filesystem = data
-mongo.username = 
-mongo.password = 
+authentication.type = NONE
+authentication.testuser = rod
+
+base.application.uri = /piecework/secure
+base.service.uri = /piecework/secure
+
+certificate.subject.header = HTTP_HEADER_CERTIFICATE_SUBJECT_NAME
+certificate.issuer.header  = HTTP_HEADER_CERTIFICATE_ISSUER_NAME
+
+encryption.cipher.algorithm = AES/CBC/PKCS5Padding
+encryption.factory.algorithm = PBKDF2WithHmacSHA1
+encryption.key.algorithm = AES
+encryption.key.name = INSECURE
+encryption.key.size = 256
+encryption.key.value = ThisNeedsToBeChanged
+encryption.pseudorandom.generator = SHA1PRNG
+
+keystore.file =
+keystore.password =
 
 ldap.person.base = dc=springframework,dc=org
 ldap.person.url = ldap://127.0.0.1:33389
@@ -17,25 +39,16 @@ ldap.group.url = ldap://127.0.0.1:33389
 ldap.group.search.base =
 ldap.group.search.filter = member=uid={1},ou=people,dc=springframework,dc=org
 
-certificate.subject.header = HTTP_HEADER_CERTIFICATE_SUBJECT_NAME
-certificate.issuer.header  = HTTP_HEADER_CERTIFICATE_ISSUER_NAME
-
-keystore.file = 
-keystore.password =
+mongo.server.addresses = 127.0.0.1:27017
+mongo.db = demo
+mongo.filesystem = data
+mongo.username =
+mongo.password =
 
 preauthentication.user.request.header = SM_USER
-authentication.type = NONE
-authentication.testuser = rod
+
 
 ui.static.urlbase = /piecework/static
 
-base.application.uri = /piecework/secure
-base.service.uri = /piecework/secure
 
-activiti.datasource.hibernate.dialect = org.hibernate.dialect.H2Dialect
-activiti.datasource.driver.name = org.h2.Driver
-activiti.datasource.url = jdbc:h2:mem:activiti;DB_CLOSE_DELAY=1000
-activiti.datasource.username = sa
-activiti.datasource.password = 
-activiti.datasource.ddl.auto = update
-activiti.datasource.show.sql = true
+
