--- a/engine/pom.xml
+++ b/engine/pom.xml
@@ -10,6 +10,8 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
+    <name>Piecework :: Engine</name>
+    <description>Piecework Engine Component</description>
     <artifactId>piecework-engine</artifactId>
 
 	<properties>
