Unit tests, including with embedded mongo

--- a/core/pom.xml
+++ b/core/pom.xml
@@ -20,6 +20,10 @@
 
 	<dependencies>
 		<!-- Other Dependencies -->
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+        </dependency>
 		<dependency>
 			<groupId>com.github.spullara.mustache.java</groupId>
 			<artifactId>compiler</artifactId>
