--- a/core/src/main/resources/META-INF/piecework/default.properties
+++ b/core/src/main/resources/META-INF/piecework/default.properties
@@ -40,6 +40,7 @@ ldap.group.search.base =
 ldap.group.search.filter = member=uid={1},ou=people,dc=springframework,dc=org
 
 mongo.server.addresses = 127.0.0.1:27017
+mongo.gridfs.bucket = attachments
 mongo.db = demo
 mongo.filesystem = data
 mongo.username =
