--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -48,6 +48,7 @@
 		<ehcache-spring-annotations.version>1.2.0</ehcache-spring-annotations.version>
 		<flapdoodle.version>1.30</flapdoodle.version>
 		<geronimo-annotation.version>1.1.1</geronimo-annotation.version>
+        <guava.version>14.0.1</guava.version>
 		<h2.version>1.3.171</h2.version>
 		<hibernate.version>3.6.0.Final</hibernate.version>
 		<hibernate-validator.version>4.0.0.CR1</hibernate-validator.version>
@@ -140,6 +141,11 @@
 				<artifactId>compiler</artifactId>
 				<version>${mustache.version}</version>
 			</dependency>
+            <dependency>
+                <groupId>com.google.guava</groupId>
+                <artifactId>guava</artifactId>
+                <version>${guava.version}</version>
+            </dependency>
 			<dependency>
 				<groupId>com.googlecode.ehcache-spring-annotations</groupId>
 				<artifactId>ehcache-spring-annotations</artifactId>
