Changing paths to distinguish app from api

--- a/core/src/main/resources/META-INF/piecework/default.properties
+++ b/core/src/main/resources/META-INF/piecework/default.properties
@@ -12,8 +12,8 @@ application.name = Piecework
 authentication.type = NONE
 authentication.testuser = rod
 
-base.application.uri = /piecework/secure
-base.service.uri = /piecework/secure
+base.application.uri = /piecework/sso
+base.service.uri = /piecework/api
 
 certificate.subject.header = HTTP_HEADER_CERTIFICATE_SUBJECT_NAME
 certificate.issuer.header  = HTTP_HEADER_CERTIFICATE_ISSUER_NAME
