--- a/bower.json
+++ b/bower.json
@@ -7,6 +7,7 @@
     "**/*.txt"
   ],
   "dependencies": {
+    "angular": null,
     "backbone": null,
     "backbone-amd": null,
     "bootstrap": null,
