Developing form user interface to handle basic wizard steps, with visibility constraints

--- a/core/src/main/resources/META-INF/piecework/default.properties
+++ b/core/src/main/resources/META-INF/piecework/default.properties
@@ -12,7 +12,7 @@ application.name = Piecework
 authentication.type = NONE
 authentication.testuser = rod
 
-base.application.uri = /piecework/sso
+base.application.uri = /piecework/app
 base.service.uri = /piecework/api
 
 certificate.subject.header = HTTP_HEADER_CERTIFICATE_SUBJECT_NAME
