--- a/core/src/main/resources/piecework/exception/StatusCodeError.properties
+++ b/core/src/main/resources/piecework/exception/StatusCodeError.properties
@@ -1,6 +1,7 @@
 
 certificate_does_not_match   = Form cannot be submitted using a different certificate than it was requested by
 
+instance_does_not_exist      = No workflow could be found for that identifier
 interaction_id_invalid 		 = Interaction identifier should be not provided on creation
 interaction_invalid 	 	 = Interaction with key %s does not exist or does not belong to the process definition key provided
 
@@ -11,6 +12,9 @@ process_does_not_exist 		 = Process with key %s does not exist
 request_does_not_match       = Form cannot be submitted to this URL
 request_id_required          = A valid request id must be provided
 screen_id_invalid 			 = Screen identifier should not be provided on creation
+
+task_does_not_exist          = No task could be found for that identifier
+
 user_does_not_match          = Form cannot be submitted as a different user than it was requested by
 
 
