--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -54,7 +54,7 @@
 		<hibernate-validator.version>4.0.0.CR1</hibernate-validator.version>
 		<htmlcleaner.version>2.5</htmlcleaner.version>
 		<httpclient4-version>4.1.1</httpclient4-version>
-		<jackson.version>1.9.0</jackson.version>
+		<jackson.version>2.2.0</jackson.version>
 		<jaxb.api.version>2.1</jaxb.api.version>
 		<jaxb.impl.version>2.1.13</jaxb.impl.version>
 		<javax.persistence.version>1.0</javax.persistence.version>
@@ -337,9 +337,19 @@
 				<artifactId>httpclient</artifactId>
 				<version>${httpclient4-version}</version>
 			</dependency>
-			<dependency>
-				<groupId>org.codehaus.jackson</groupId>
-				<artifactId>jackson-jaxrs</artifactId>
+            <dependency>
+                <groupId>com.fasterxml.jackson.core</groupId>
+                <artifactId>jackson-annotations</artifactId>
+                <version>${jackson.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.fasterxml.jackson.jaxrs</groupId>
+                <artifactId>jackson-jaxrs-base</artifactId>
+                <version>${jackson.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.fasterxml.jackson.jaxrs</groupId>
+                <artifactId>jackson-jaxrs-json-provider</artifactId>
 				<version>${jackson.version}</version>
 			</dependency>
 			<dependency>
