Basic search instance user interface working

--- a/core/src/main/resources/piecework/exception/StatusCodeError.properties
+++ b/core/src/main/resources/piecework/exception/StatusCodeError.properties
@@ -1,6 +1,7 @@
 
 certificate_does_not_match   = Form cannot be submitted using a different certificate than it was requested by
 
+instance_cannot_be_modified  = Workflow can only be modified by changing the application status and application status explanation
 instance_does_not_exist      = No workflow could be found for that identifier
 interaction_id_invalid 		 = Interaction identifier should be not provided on creation
 interaction_invalid 	 	 = Interaction with key %s does not exist or does not belong to the process definition key provided
