--- a/core/pom.xml
+++ b/core/pom.xml
@@ -101,11 +101,11 @@
             <groupId>com.fasterxml.jackson.jaxrs</groupId>
             <artifactId>jackson-jaxrs-json-provider</artifactId>
 		</dependency>
-		<dependency>
-			<groupId>org.codehaus.jettison</groupId>
-			<artifactId>jettison</artifactId>
-			<version>1.3.3</version>
-		</dependency>
+		<!--<dependency>-->
+			<!--<groupId>org.codehaus.jettison</groupId>-->
+			<!--<artifactId>jettison</artifactId>-->
+			<!--<version>1.3.3</version>-->
+		<!--</dependency>-->
 		<dependency>
 			<groupId>org.mockito</groupId>
 			<artifactId>mockito-all</artifactId>
