--- a/engine/pom.xml
+++ b/engine/pom.xml
@@ -35,6 +35,11 @@
 		</dependency>
 		
 		<!-- Other Dependencies -->
+        <dependency>
+            <groupId>com.fasterxml.uuid</groupId>
+            <artifactId>java-uuid-generator</artifactId>
+            <version>3.1.3</version>
+        </dependency>
 		<dependency>
 			<groupId>com.h2database</groupId>
 			<artifactId>h2</artifactId>
