Adding anonymous form submission capability

--- a/core/src/main/resources/META-INF/piecework/default.properties
+++ b/core/src/main/resources/META-INF/piecework/default.properties
@@ -12,7 +12,8 @@ application.name = Piecework
 authentication.type = NONE
 authentication.testuser = rod
 
-base.application.uri = /piecework/app
+base.application.uri = /piecework/secure
+base.public.uri = /piecework/public
 base.service.uri = /piecework/api
 
 certificate.subject.header = HTTP_HEADER_CERTIFICATE_SUBJECT_NAME
@@ -29,6 +30,8 @@ encryption.pseudorandom.generator = SHA1PRNG
 keystore.file =
 keystore.password =
 
+ldap.displayname.attribute = cn
+ldap.email.attribute = emailAddress
 ldap.person.base = dc=springframework,dc=org
 ldap.person.url = ldap://127.0.0.1:33389
 ldap.person.search.base = 
@@ -38,6 +41,11 @@ ldap.group.base = ou=groups,dc=springframework,dc=org
 ldap.group.url = ldap://127.0.0.1:33389
 ldap.group.search.base =
 ldap.group.search.filter = member=uid={1},ou=people,dc=springframework,dc=org
+
+mail.from.address = piecework-noreply@nowhere.com
+mail.from.label = Piecework
+mail.server.host = localhost
+mail.server.port = 25
 
 mongo.server.addresses = 127.0.0.1:37017
 mongo.gridfs.bucket = attachments
