--- a/core/src/main/resources/piecework/exception/StatusCodeError.properties
+++ b/core/src/main/resources/piecework/exception/StatusCodeError.properties
@@ -1,6 +1,8 @@
 
 certificate_does_not_match   = Form cannot be submitted using a different certificate than it was requested by
 
+form_access_forbidden        = Access denied
+
 instance_cannot_be_modified  = Workflow can only be modified by changing the application status and application status explanation
 instance_does_not_exist      = No workflow could be found for that identifier
 interaction_id_invalid 		 = Interaction identifier should be not provided on creation
