Fixing bpmn task listener custom parsing

--- a/core/src/main/resources/META-INF/piecework/default.properties
+++ b/core/src/main/resources/META-INF/piecework/default.properties
@@ -55,7 +55,7 @@ mongo.username =
 mongo.password =
 
 preauthentication.user.request.header = SM_USER
-
+templates.directory = src/main/webapp/app
 
 ui.static.urlbase = /piecework
 
