Modifying to centralize search interface under form resource

--- a/core/src/main/resources/piecework/exception/StatusCodeError.properties
+++ b/core/src/main/resources/piecework/exception/StatusCodeError.properties
@@ -14,6 +14,8 @@ process_does_not_exist 		 = Process with key %s does not exist
 
 request_does_not_match       = Form cannot be submitted to this URL
 request_id_required          = A valid request id must be provided
+request_type_required        = A valid request type must be provided
+
 screen_id_invalid 			 = Screen identifier should not be provided on creation
 
 task_does_not_exist          = No task could be found for that identifier
