Fixing LDAP for identity and authorities populator using TLS

--- a/core/src/main/resources/META-INF/piecework/default.properties
+++ b/core/src/main/resources/META-INF/piecework/default.properties
@@ -30,8 +30,10 @@ encryption.pseudorandom.generator = SHA1PRNG
 keystore.file =
 keystore.password =
 
-ldap.displayname.attribute = cn
-ldap.email.attribute = emailAddress
+ldap.attribute.id.internal = uid
+ldap.attribute.id.external = uid
+ldap.attribute.name.display = cn
+ldap.attribute.email = emailAddress
 ldap.person.base = dc=springframework,dc=org
 ldap.person.url = ldap://127.0.0.1:33389
 ldap.person.search.base = 
