--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -47,7 +47,7 @@
 		<cxf.version>2.7.5</cxf.version>
 		<ehcache.version>2.6.5</ehcache.version>
 		<ehcache-spring-annotations.version>1.2.0</ehcache-spring-annotations.version>
-		<flapdoodle.version>1.30</flapdoodle.version>
+		<flapdoodle.version>1.33</flapdoodle.version>
 		<geronimo-annotation.version>1.1.1</geronimo-annotation.version>
         <guava.version>14.0.1</guava.version>
 		<h2.version>1.3.171</h2.version>
@@ -76,7 +76,7 @@
 		<spring.data.mongo.version>1.2.1.RELEASE</spring.data.mongo.version>
 		<spring.version>3.2.1.RELEASE</spring.version>
 		<spring.ldap.version>1.3.1.RELEASE</spring.ldap.version>
-		<spring.security.version>3.1.3.RELEASE</spring.security.version>
+		<spring.security.version>3.1.4.RELEASE</spring.security.version>
 		<spring.security.javaconfig.version>1.0.0.CI-SNAPSHOT</spring.security.javaconfig.version>
 		<xalan.version>2.7.0</xalan.version>
 	</properties>
@@ -425,18 +425,17 @@
 				<type>jar</type>
 				<!-- <scope>compile</scope> -->
 			</dependency>
-			<dependency>
-				<groupId>org.slf4j</groupId>
-				<artifactId>slf4j-log4j12</artifactId>
-				<version>${slf4j.version}</version>
-				<type>jar</type>
-				<!-- <scope>compile</scope>-->
-			</dependency>
-			<dependency>
-				<groupId>org.slf4j</groupId>
-				<artifactId>jcl-over-slf4j</artifactId>
-				<version>${slf4j.version}</version>
-			</dependency>
+			<!--<dependency>-->
+				<!--<groupId>org.slf4j</groupId>-->
+				<!--<artifactId>slf4j-log4j12</artifactId>-->
+				<!--<version>${slf4j.version}</version>-->
+				<!--<type>jar</type>-->
+			<!--</dependency>-->
+			<!--<dependency>-->
+				<!--<groupId>org.slf4j</groupId>-->
+				<!--<artifactId>jcl-over-slf4j</artifactId>-->
+				<!--<version>${slf4j.version}</version>-->
+			<!--</dependency>-->
 			<dependency>
 				<groupId>org.springframework</groupId>
 				<artifactId>spring-aop</artifactId>
