Fixing non-authenticated ldap config

--- a/core/src/main/resources/META-INF/piecework/default.properties
+++ b/core/src/main/resources/META-INF/piecework/default.properties
@@ -33,7 +33,8 @@ keystore.password =
 ldap.attribute.id.internal = uid
 ldap.attribute.id.external = uid
 ldap.attribute.name.display = cn
-ldap.attribute.email = emailAddress
+ldap.authentication.user =
+ldap.authentication.password =
 ldap.person.base = dc=springframework,dc=org
 ldap.person.url = ldap://127.0.0.1:33389
 ldap.person.search.base = 
