--- a/core/src/main/resources/piecework/exception/StatusCodeError.properties
+++ b/core/src/main/resources/piecework/exception/StatusCodeError.properties
@@ -19,7 +19,7 @@ request_type_required        = A valid request type must be provided
 screen_id_invalid 			 = Screen identifier should not be provided on creation
 
 task_does_not_exist          = No task could be found for that identifier
-
+task_id_required             = A valid task must be assigned to the user in order to cancel the process
 user_does_not_match          = Form cannot be submitted as a different user than it was requested by
 
 
