Adding repository scanning via annotation

--- a/processes/pom.xml
+++ b/processes/pom.xml
@@ -30,7 +30,28 @@
             <artifactId>piecework-engine</artifactId>
             <version>${project.version}</version>
         </dependency>
-		
+
+        <!-- Amazon Dependencies -->
+        <dependency>
+            <groupId>com.amazonaws</groupId>
+            <artifactId>aws-java-sdk</artifactId>
+            <version>1.4.1</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.codehaus.jackson</groupId>
+                    <artifactId>jackson-jaxrs</artifactId>
+                </exclusion>
+                <exclusion>
+                    <artifactId>jackson-mapper-asl</artifactId>
+                    <groupId>org.codehaus.jackson</groupId>
+                </exclusion>
+                <exclusion>
+                    <artifactId>jackson-core-asl</artifactId>
+                    <groupId>org.codehaus.jackson</groupId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+
 		<!-- Other Dependencies -->
 		<dependency>
 			<groupId>commons-beanutils</groupId>
