Adding task resource logic to handle service task submission

--- a/core/pom.xml
+++ b/core/pom.xml
@@ -21,6 +21,10 @@
 	<dependencies>
 		<!-- Other Dependencies -->
         <dependency>
+            <groupId>com.fasterxml.uuid</groupId>
+            <artifactId>java-uuid-generator</artifactId>
+        </dependency>
+        <dependency>
             <groupId>com.google.guava</groupId>
             <artifactId>guava</artifactId>
         </dependency>
