--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -78,6 +78,7 @@
 		<spring.ldap.version>1.3.1.RELEASE</spring.ldap.version>
 		<spring.security.version>3.1.4.RELEASE</spring.security.version>
 		<spring.security.javaconfig.version>1.0.0.CI-SNAPSHOT</spring.security.javaconfig.version>
+        <uuid-generator.version>3.1.3</uuid-generator.version>
 		<xalan.version>2.7.0</xalan.version>
 	</properties>
 	<profiles>
@@ -137,6 +138,11 @@
 				<artifactId>cglib</artifactId>
 				<version>${cglib.version}</version>
 			</dependency>
+            <dependency>
+                <groupId>com.fasterxml.uuid</groupId>
+                <artifactId>java-uuid-generator</artifactId>
+                <version>${uuid-generator.version}</version>
+            </dependency>
 			<dependency>
 				<groupId>com.github.spullara.mustache.java</groupId>
 				<artifactId>compiler</artifactId>
