--- a/core/src/main/resources/META-INF/piecework/default.properties
+++ b/core/src/main/resources/META-INF/piecework/default.properties
@@ -56,6 +56,7 @@ mongo.db = demo
 mongo.filesystem = data
 mongo.username =
 mongo.password =
+mongo.use.ssl = false
 
 preauthentication.user.request.header = SM_USER
 templates.directory = src/main/webapp/app
