--- a/core/src/main/resources/piecework/exception/StatusCodeError.properties
+++ b/core/src/main/resources/piecework/exception/StatusCodeError.properties
@@ -1,3 +1,4 @@
+attachment_does_not_exist    = Attachment with key %s does not exist
 
 certificate_does_not_match   = Form cannot be submitted using a different certificate than it was requested by
 
