--- a/core/src/main/resources/piecework/exception/StatusCodeError.properties
+++ b/core/src/main/resources/piecework/exception/StatusCodeError.properties
@@ -1,3 +1,5 @@
+active_task_required         = This action is only permitted when you have been assigned a task and it remains active
+
 attachment_does_not_exist    = Attachment with key %s does not exist
 
 certificate_does_not_match   = Form cannot be submitted using a different certificate than it was requested by
@@ -6,6 +8,9 @@ form_access_forbidden        = Access denied
 
 instance_cannot_be_modified  = Workflow can only be modified by changing the application status and application status explanation
 instance_does_not_exist      = No workflow could be found for that identifier
+
+insufficient_permission      = You do not have the necessary permissions to complete this action
+
 interaction_id_invalid 		 = Interaction identifier should be not provided on creation
 interaction_invalid 	 	 = Interaction with key %s does not exist or does not belong to the process definition key provided
 
@@ -21,6 +26,7 @@ screen_id_invalid 			 = Screen identifier should not be provided on creation
 
 task_does_not_exist          = No task could be found for that identifier
 task_id_required             = A valid task must be assigned to the user in order to cancel the process
+task_required                = This action is only permitted when you have been assigned a task
 user_does_not_match          = Form cannot be submitted as a different user than it was requested by
 
 
