Reworking validation / submission to simplify maintenance

--- a/core/src/main/resources/piecework/exception/StatusCodeError.properties
+++ b/core/src/main/resources/piecework/exception/StatusCodeError.properties
@@ -17,12 +17,15 @@ interaction_invalid 	 	 = Interaction with key %s does not exist or does not bel
 process_business_key_limit   = Alias provided must be 140 characters or shorter
 process_change_key_duplicate = Cannot rename process from %s to %s because a process with the new key already exists
 process_does_not_exist 		 = Process with key %s does not exist
+process_is_misconfigured     = Process is not correctly configured
 
 request_does_not_match       = Form cannot be submitted to this URL
 request_id_required          = A valid request id must be provided
 request_type_required        = A valid request type must be provided
 
 screen_id_invalid 			 = Screen identifier should not be provided on creation
+
+system_action_only           = This action can only be taken by an authenticated system
 
 task_does_not_exist          = No task could be found for that identifier
 task_id_required             = A valid task must be assigned to the user in order to cancel the process
