Switching actions to use enum, adding to task complete

--- a/core/src/main/resources/piecework/exception/StatusCodeError.properties
+++ b/core/src/main/resources/piecework/exception/StatusCodeError.properties
@@ -27,6 +27,7 @@ screen_id_invalid 			 = Screen identifier should not be provided on creation
 
 system_action_only           = This action can only be taken by an authenticated system
 
+task_action_invalid          = Task must have a valid action of COMPLETE, REJECT, SAVE, or VALIDATE
 task_does_not_exist          = No task could be found for that identifier
 task_id_required             = A valid task must be assigned to the user in order to cancel the process
 task_required                = This action is only permitted when you have been assigned a task
