Allow individual form values to be deleted (e.g. files)

--- a/core/src/main/resources/META-INF/piecework/default.properties
+++ b/core/src/main/resources/META-INF/piecework/default.properties
@@ -11,6 +11,7 @@ application.name = Piecework
 
 authentication.type = NONE
 authentication.testuser = rod
+authentication.testcredentials = koala
 
 base.application.uri = /piecework/secure
 base.public.uri = /piecework/public
@@ -27,14 +28,16 @@ encryption.key.size = 128
 encryption.key.value = ThisNeedsToBeChanged
 encryption.pseudorandom.generator = SHA1PRNG
 
+host.uri = http://localhost:8000
+
 keystore.file =
 keystore.password =
 
 ldap.attribute.id.internal = uid
 ldap.attribute.id.external = uid
 ldap.attribute.name.display = cn
-ldap.authentication.user =
-ldap.authentication.password =
+ldap.authentication.user = rod
+ldap.authentication.password = koala
 ldap.person.base = dc=springframework,dc=org
 ldap.person.url = ldap://127.0.0.1:33389
 ldap.person.search.base = 
