Largely completed reworking of values to object, but still trying to get MongoOperations to do incremental updates with subtyping of child value in Map

--- a/core/src/main/resources/piecework/exception/StatusCodeError.properties
+++ b/core/src/main/resources/piecework/exception/StatusCodeError.properties
@@ -4,15 +4,19 @@ attachment_does_not_exist    = Attachment with key %s does not exist
 
 certificate_does_not_match   = Form cannot be submitted using a different certificate than it was requested by
 
+encryption_error             = Unable to correctly store value for %s
+
 form_access_forbidden        = Access denied
 
-instance_cannot_be_modified  = Workflow can only be modified by changing the application status and application status explanation
+instance_cannot_be_modified  = Process can only be modified by changing the process status or the application status
 instance_does_not_exist      = No workflow could be found for that identifier
 
 insufficient_permission      = You do not have the necessary permissions to complete this action
 
 interaction_id_invalid 		 = Interaction identifier should be not provided on creation
 interaction_invalid 	 	 = Interaction with key %s does not exist or does not belong to the process definition key provided
+
+invalid_process_status       = Unable to update process status or process is already in that state
 
 process_business_key_limit   = Alias provided must be 140 characters or shorter
 process_change_key_duplicate = Cannot rename process from %s to %s because a process with the new key already exists
