Centralizing allowedTask logic and fixing readonly screens

--- a/core/src/main/resources/piecework/exception/StatusCodeError.properties
+++ b/core/src/main/resources/piecework/exception/StatusCodeError.properties
@@ -16,6 +16,7 @@ insufficient_permission      = You do not have the necessary permissions to comp
 interaction_id_invalid 		 = Interaction identifier should be not provided on creation
 interaction_invalid 	 	 = Interaction with key %s does not exist or does not belong to the process definition key provided
 
+invalid_assignment           = Unable to assign this process to the specified individual
 invalid_process_status       = Unable to update process status or process is already in that state
 
 process_business_key_limit   = Alias provided must be 140 characters or shorter
