--- a/core/pom.xml
+++ b/core/pom.xml
@@ -94,6 +94,10 @@
 			<artifactId>aspectjweaver</artifactId>
 		</dependency>
         <dependency>
+            <groupId>org.bouncycastle</groupId>
+            <artifactId>bcprov-jdk15on</artifactId>
+        </dependency>
+        <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-annotations</artifactId>
         </dependency>
@@ -105,11 +109,6 @@
             <groupId>com.fasterxml.jackson.jaxrs</groupId>
             <artifactId>jackson-jaxrs-json-provider</artifactId>
 		</dependency>
-		<!--<dependency>-->
-			<!--<groupId>org.codehaus.jettison</groupId>-->
-			<!--<artifactId>jettison</artifactId>-->
-			<!--<version>1.3.3</version>-->
-		<!--</dependency>-->
 		<dependency>
 			<groupId>org.mockito</groupId>
 			<artifactId>mockito-all</artifactId>
@@ -139,12 +138,6 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
-		<!-- <dependency>
-			<groupId>org.slf4j</groupId>
-			<artifactId>slf4j-log4j12</artifactId>
-			<type>jar</type>
-			<scope>compile</scope>
-		</dependency> -->
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-aop</artifactId>
