--- a/core/src/main/resources/META-INF/piecework/default.properties
+++ b/core/src/main/resources/META-INF/piecework/default.properties
@@ -30,6 +30,8 @@ encryption.pseudorandom.generator = SHA1PRNG
 
 host.uri = http://localhost:8000
 
+identity.provider.protocol = ldap
+
 keystore.file =
 keystore.password =
 
