More work on ui for designing deployment interactions

--- a/core/src/main/resources/piecework/exception/StatusCodeError.properties
+++ b/core/src/main/resources/piecework/exception/StatusCodeError.properties
@@ -19,6 +19,8 @@ interaction_invalid 	 	 = Interaction with key %s does not exist or does not bel
 invalid_assignment           = Unable to assign this process to the specified individual
 invalid_process_status       = Unable to update process status or process is already in that state
 
+not_editable                 = This item cannot be edited or deleted
+
 process_business_key_limit   = Alias provided must be 140 characters or shorter
 process_change_key_duplicate = Cannot rename process from %s to %s because a process with the new key already exists
 process_does_not_exist 		 = Process with key %s does not exist
