Reworking user interface design organization

--- a/core/src/main/resources/piecework/exception/StatusCodeError.properties
+++ b/core/src/main/resources/piecework/exception/StatusCodeError.properties
@@ -1,5 +1,7 @@
 active_task_required         = This action is only permitted when you have been assigned a task and it remains active
 
+attachment_could_not_be_saved = File cannot be stored
+attachment_is_too_large      = File cannot be larger than %s bytes!
 attachment_does_not_exist    = Attachment with key %s does not exist
 
 certificate_does_not_match   = Form cannot be submitted using a different certificate than it was requested by
